# expense-tracker

./: .dockerignore  .gitignore  .pre-commit-config.yaml  gunicorn.conf.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  setup.cfg  tsconfig.json  webpack.config.js
docker/: local.docker-compose.yml  prod.docker-compose.yml
docker/expense/: .env.example  local.Dockerfile  prod.Dockerfile  start-prod.sh
expense/: asgi.py  conftest.py  types.py  urls.py  utils.py  wsgi.py
expense/accounts/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py
expense/dashboard/: apps.py  serializers.py  urls.py  views.py
expense/events/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
expense/expenses/: apps.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
expense/savings/: admin.py  apps.py  forms.py  models.py
expense/settings/: base.py  local.py  prod.py
expense/users/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
expense_fe/scss/: style.scss
expense_fe/ts/: accountDetail.ts  activityTable.ts  addExpense.ts  addImageForm.ts  bootstrap.ts  dashboard.ts  detail.ts  (+7 more)
static/: AddImageForm.js  UpdateImageForm.js  accountDetail.js  addForm.js  chunk.927.js  chunk.vendors-node_modules_apexcharts_dist_apexcharts_common_js.js  dashboard.js  expenseAddForm.js  expenseDetail.js  expenseForm.js  imageForm.js  selectDefaultFromUrl.js  style.css  style.js  styleJs.js  transactions.js  transferForm.js  twoDonuts.js  updateImageForm.js
templates/: base.html
(+108 files in other folders)
