[tool.poetry]
name = "expense"
version = "0.1.0"
description = "Book literally anything"
authors = ["Syafiq Termizi <ahmadsyafiq93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2-binary = "^2.9.6"
redis = {extras = ["hiredis"], version = "^4.5.5"}
djangorestframework = "^3.14.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
django-debug-toolbar = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
