[tool.poetry]
name = "expense"
version = "0.1.0"
description = "Book literally anything"
authors = ["Syafiq Termizi <ahmadsyafiq93@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
psycopg2-binary = "^2.9.6"
redis = {extras = ["hiredis"], version = "^4.5.5"}
djangorestframework = "^3.14.0"
pillow = "^10.0.0"
huey = "^2.4.5"
gevent = "^22.10.2"
gunicorn = "^21.2.0"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
sentry-sdk = "^1.28.1"
django-storages = "^1.13.2"
boto3 = "^1.28.15"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
django-debug-toolbar = "^4.1.0"
ipython = "^8.13.2"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
